--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- This is a comment -->
 <!-- This is a comment -->
+<!-- This is a comment -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
