--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- This is a comment -->
 <!-- This is a comment -->
 <!-- This is a comment -->
+<!-- This is a comment -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
